# Stash

./: .gitignore  Cargo.toml  README.md  build.rs  build_release  count  install-stash  set_linux_desktop_app  todos.md
assets/: UI design.excalidraw  stash.desktop
src/: app.rs  enums.rs  lib.rs  main.rs  utils.rs
src/backend/: bookmark_manager.rs  mod.rs  models.rs
src/ui/: about.rs  add_link.rs  add_topic.rs  components.rs  link_viewport.rs  mod.rs  topic_viewport.rs
src/utils/: enums.rs  mod.rs  run_first_error_app.rs  run_main_app.rs
wix/: main.wxs
