[package]
name = "stash"
version = "0.0.5"
edition = "2021"
description = "A new way to manage your bookmarks!"

[package.metadata.bundle]
name = "Stash"
identifier = "io.github.aymanfarsi.stash"
icon = ["assets/*.ico"]

[dependencies]
eframe = { version = "0.27.2", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui = { version = "0.27.2", features = [
    # "persistence",
    "log",
    "rayon",
    "unity",
] }
egui_extras = { version = "0.27.2", features = ["all_loaders"] }
image = { version = "0.25.1", features = ["png"] }
ehttp = { version = "0.5.0", features = [] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = { version = "1.0.117" }
tray-icon = { version = "0.14.0" }
tokio = { version = "1.33.0", features = [
    "sync",
    "rt",
    "rt-multi-thread",
    "time",
] }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
lazy_static = "1.4.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
