[package]
name = "Stash"
version = "0.5.1"
authors = ["evilDAVE <aymanfarsi99@proton.me>"]
edition = "2021"
description = "A new way to manage your bookmarks!"
license = "MIT"

[dependencies]
eframe = { version = "0.27.2", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui = { version = "0.27.2", features = [
    # "persistence",
    "log",
    "rayon",
    "unity",
] }
egui_extras = { version = "0.27.2", features = ["all_loaders"] }
image = { version = "0.25.1", features = ["png"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = { version = "1.0.117" }
# tray-icon = { version = "0.14.0" }
tokio = { version = "1.33.0", features = ["rt-multi-thread"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
lazy_static = "1.4.0"
egui-phosphor = "0.5.0"
indexmap = { version = "2.2.6", features = ["rayon"] }
directories = "5.0.1"
chrono = "0.4.38"
egui-modal = "0.3.6"
webbrowser = { version = "1.0.1", features = ["hardened", "disable-wsl"] }
catppuccin-egui = { version = "5.1.1", default-features = false, features = [
    "egui27",
] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winbase"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
